Fixed the social media spacing

--- a/static/css/bsg.css
+++ b/static/css/bsg.css
@@ -136,6 +136,10 @@ img {
 	clear: both;
 }
 
+#social_media {
+	margin-top: 15px;
+}
+
 #side-b-ads img {
 	margin-top: 15px;
 
